@@ -10,4 +10,6 @@ is making sure that spelling/grammer/whatever is usable and that you are using
 
 The release team should empty this file after each release.
 
-
+Savegames now have a prefix indicating the campaign they are from if
+the campaign WML declared an abbrev= tag.  All mainline campaigns
+have this tag,
